fix authorize bearer

--- a/Smarest/appsettings.json
+++ b/Smarest/appsettings.json
@@ -11,9 +11,9 @@
   },
   "AllowedHosts": "*",
   "AuthSettings": {
-    "Key": "This is the key that we will use in the encryption",
-    "Audience": "http://huyfrontend.com",
-    "Issuer": "http://huyfrontend.com"
+    "Key": "This is the key that i will use in the encryption",
+    "Audience": "http://huybackend.com",
+    "Issuer": "http://huybackend.com"
   },
   "SendGridAPIKey": "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",
   "AppUrl": "http://localhost:53058"
