--- a/Smarest/appsettings.json
+++ b/Smarest/appsettings.json
@@ -9,6 +9,18 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://localhost:5000"
+      },
+      "Https": {
+        "Url": "https://localhost:5001"
+      }
+    }
+  },
+  
   "AllowedHosts": "*",
   "AuthSettings": {
     "Key": "This is the key that i will use in the encryption",
