--- a/Smarest/appsettings.json
+++ b/Smarest/appsettings.json
@@ -9,9 +9,13 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  
-
-  
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://0.0.0.0:5000"
+      }
+    }
+  },
   "AllowedHosts": "*",
   "AuthSettings": {
     "Key": "This is the key that i will use in the encryption",
