--- a/Smarest/appsettings.json
+++ b/Smarest/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=mssql-123171-0.cloudclusters.net,10034;Initial Catalog=Smarest;User ID=huy;Password=Su123123"
+    "DefaultConnection": "Server=.;Database=Smarest;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
@@ -9,13 +9,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "Kestrel": {
-    "Endpoints": {
-      "Http": {
-        "Url": "http://0.0.0.0:5000"
-      }
-    }
-  },
+
   "AllowedHosts": "*",
   "AuthSettings": {
     "Key": "This is the key that i will use in the encryption",
@@ -25,3 +19,5 @@
   "SendGridAPIKey": "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",
   "AppUrl": "http://localhost:53058"
 }
+
+
